--- a/CNN_inclass_activity_Breakout_room_10.ipynb
+++ b/CNN_inclass_activity_Breakout_room_10.ipynb
@@ -42,7 +42,7 @@
         "---\n",
         "\n",
         "\n",
-        "3. Favour Akinwande:\n",
+        "3. Favour Akinwande: I think we could have implemented data augmentation to reduce overfitting\n",
         "\n",
         "\n",
         "---\n",
