--- a/CNN_inclass_activity_Breakout_room_10.ipynb
+++ b/CNN_inclass_activity_Breakout_room_10.ipynb
@@ -48,7 +48,7 @@
         "---\n",
         "\n",
         "\n",
-        "4. Chance Karambizi\n",
+        "4. Chance Karambizi: I think we should’ve added proper data splitting, now we’re evaluating on the exact same three images we trained on\n",
         "\n",
         "\n",
         "---\n",
